Kubernetes/stage_deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: stage-deployment
  namespace: stage
  labels:
    app: stage-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: stage-app
  template:
    metadata:
      labels:
        app: stage-app
    spec:
      imagePullSecrets:
      - name: gitlab-registry-secret

      containers:
      - name: stage-container
        image: registry.gitlab.com/devops6080427/zomato-app:IMAGE_TAG
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: "250m"
            memory: "256Mi"
          requests:
            cpu: "100m"
            memory: "128Mi"
---
apiVersion: v1
kind: Service
metadata:
  name:   myapp-stage-service
  namespace: stage
spec:
  selector:
    app: stage-app
  ports:
  - port: 80
    targetPort: 80
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stage-ingress
  namespace: stage
spec:
  ingressClassName: nginx
  rules:
    - host: stage.zomatoapp.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: myapp-stage-service
                port:
                  number: 80
